complilation_result.txt
code.c: In function ‘main’:
code.c:5:5: error: expected ‘;’ before ‘return’
     return 0;
     ^~~~~~
